# ropit

./: .gitmodules  CMakeLists.txt  COMPILING  ChangeLog  Makefile  README  TODO  build.sh  gadgets.c  gadgets.h  gadgets_internal.h  ropit-file.c  ropit-unique.py  ropit.c  ropit_options.c  ropit_options.h  snippets.c
doc/: gadget_cache.txt
doc/classification/: x86.txt
lib/bparse/: CMakeLists.txt
lib/bparse/inc/: file_elf.h  file_pe.h
lib/bparse/samples/: Makefile  elf_reconstructor.c  file_dumper.c  read_elf.c  read_elfpe.c  read_pe.c
lib/bparse/src/: file_elf.c  file_elf_view.c  file_pe.c  file_pe_view.c
lib/core/payloads/x86/32bits/linux/: payload.py
lib/file/inc/: file-ropit-metadata.h  file-ropit-section.h
lib/file/src/: file-ropit-metadata.c  file-ropit-section.c
lib/gadgets/: CMakeLists.txt  Makefile
lib/gadgets/inc/: gadgets_cache.h  gadgets_find.h
lib/gadgets/inc/arch/: arch.h
lib/gadgets/src/: gadgets.c  gadgets_cache.c  gadgets_find.c  offsets.c
lib/gadgets/src/arch/x86/: gadget_output.c  gadgets.c
lib/libbparse/: CMakeLists.txt  Makefile
lib/libbparse/inc/: file_elf.h  file_pe.h
lib/libbparse/samples/: elf_reconstructor.c  file_dumper.c
lib/libbparse/src/: file_binary.c  file_elf.c  file_elf.h  file_pe.c
lib/libfile-rop/: CMakeLists.txt  Makefile  file-gadgets.c  file-ropit-metadata.c  file-ropit-metadata.h  file-ropit-section.h  file-ropit.c  file-ropit.h  file-test.c
lib/libfile-rop/inc/: byte-order.h  file-gadgets.h  file-ropit-metadata.h
lib/libfile-rop/src/: byte-order.c  file-gadgets.c  file-ropit-metadata.c
lib/libgadgets/: CMakeLists.txt  Makefile  gadgets.c  gadgets.h  gadgets_cache.c  gadgets_cache.h  gadgets_data.c  gadgets_data.h  gadgets_find.c  gadgets_internal.h  offsets.c  offsets.h  string_extended.c  string_extended.h
lib/libgadgets/arch/: arch.h
lib/libgadgets/arch/x86/: gadgets.c  gadgets_x86.c  gadgets_x86.h  inst.h
lib/libgadgets/inc/: gadgets.h  gadgets_cache.h  gadgets_find.h
lib/libgadgets/inc/arch/x86/: gadget_output.h  gadgets.h
lib/libgadgets/src/: gadgets.c  gadgets_cache.c  gadgets_find.c
lib/libgadgets/src/arch/: arch.c
lib/libgadgets/src/arch/x86/: gadget_output.c  gadgets.c  inst.c
lib/librop/payloads/x86/32bits/linux/: execve.py
tests/: Makefile  hw.c
